fix (bug) : bug fixing when the debezium and kafka not working correctly fix(bug) : updating python flask and jinjja2 for showing the data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,7 +79,7 @@ services:
       - connect
 
   consumer:
-    build: .
+    build: ./consumer
     container_name: consumer
     ports:
       - "5000:5000"
